--- a/pug/index.pug
+++ b/pug/index.pug
@@ -4,11 +4,11 @@ include ./includes/header.pug
   <body>
     section
       .grid
-        .unit.half
+        .unit.whole
           .blurb-hero
             h1  A Slow Guy Learning Web Development.
             p.sub-title Welcome to a place where eveyday, I will try to share a bit about my learning experiences. Let's begin!
-            
+
 
 
 
