--- a/stylus/main.styl
+++ b/stylus/main.styl
@@ -33,8 +33,9 @@ h1
 
 p.sub-title
   color #707176
-  font-size: 19px
-  line-height: 26px
+  font-size: 22px
+  line-height 30px
+  font-weight 300
 
 
 
@@ -82,3 +83,27 @@ a
   margin-top: 50%
   max-width: 50%
   float right
+
+
+//   _______    _______   ________
+//  /"      \  /"     "| /"       )
+// |:        |(: ______)(:   \___/
+// |_____/   ) \/    |   \___  \
+//  //      /  // ___)_   __/  \\  _____
+// |:  __   \ (:      "| /" \   :)))_  ")
+// |__|  \___) \_______)(_______/(_____(
+
+
+@media screen and (max-width: 1280px)
+  body
+    .blurb-hero
+      padding-right: 6%
+    h1
+      font-size: 58px
+      line-height: 65px
+
+@media screen and (max-width: 861px)
+  body
+    .blurb-hero
+      float left
+      padding-right: 0
