--- a/includes/header.html
+++ b/includes/header.html
@@ -9,5 +9,5 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>grunt-code-alpha</title>
-<link rel="stylesheet" href="css/main.css" type="text/css">
+<link rel="stylesheet" href="../css/main.css" type="text/css">
 </head>
