--- a/pug/includes/footer.pug
+++ b/pug/includes/footer.pug
@@ -4,7 +4,7 @@
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
 script(src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.5.3/modernizr.min.js")
 script(src="https://cdnjs.cloudflare.com/ajax/libs/barba.js/0.0.10/barba.min.js")
-script(src="scripts/main.js")
+script(src="../scripts/main.js")
 
 //- <!-- endbuild -->
 
