--- a/stylus/main.styl
+++ b/stylus/main.styl
@@ -25,8 +25,8 @@ wht = white
 light-blue = #00A3FF
 
 h1
-  font-size 80px
-  line-height 80px
+  font-size 54px
+  line-height 60px
   color #4EF67A
   font-weight 900
   margin-bottom 30px
@@ -80,8 +80,9 @@ a
 
 
 .blurb-hero
-  margin-top: 50%
-  max-width: 50%
+  margin-top: 300px
+  margin-right: 100px
+  max-width: 400px
   float right
 
 
@@ -96,11 +97,7 @@ a
 
 @media screen and (max-width: 1280px)
   body
-    .blurb-hero
-      padding-right: 6%
-    h1
-      font-size: 58px
-      line-height: 65px
+
 
 @media screen and (max-width: 861px)
   body
