--- a/pug/index.pug
+++ b/pug/index.pug
@@ -7,7 +7,7 @@ include ./includes/header.pug
         .unit.whole
           .blurb-hero
             h1  A Slow Guy Learning Web Development.
-            p.sub-title Welcome to a place where eveyday, I will try to share a bit about my learning experiences. Let's begin!
+            p.sub-title Welcome to a place where eveyday, I will try to share a bit about my learning experiences. Let's begin!!
 
 
 
