--- a/pug/index.pug
+++ b/pug/index.pug
@@ -7,11 +7,84 @@ include ./includes/header.pug
         .unit.whole
           .blurb-hero
             h1  A Slow Guy Learning Web Development.
-            p.sub-title Welcome to a place where eveyday, I will try to share a bit about my learning experiences. Let's begin!!
+            p.sub-title Welcome to a place where eveyday, I will try to share a bit about my learning experiences. Let's begin!
+      .grid
+        .unit.whole
+          ol.project-links
+            li
+               a(href="#must-know-web-development-tech", class="title") Must-know web development tech
+               .panel
+                  p
+                    |Video gives you a glimpse of Web Development today and illustrates where one may be now. After watching this, it filter a lot of the buffer out there when it come to where to begin.
+
+                  a(href="https://www.youtube.com/watch?v=sBzRwzY7G-k&index=16&list=PLTFBDMtfpIkzv3umAvLJ6pvmwvjR-KvgS", target="_blank", class="link") Youtube Video Link
+
+            li
+               a(href="#atom-text-editor", class="title") Atom Text Editor for now
+               .panel
+                  p
+                    |After coming face-to-face with this text editor, It's now my new favorite, at least for now. Check out the link below on how to use it.
+
+                  a(href="https://www.youtube.com/watch?v=hPC6keUUiTA", target="_blank", class="link") Youtube Video Link
+            li
+               a(href="#gulp", class="title") Gulp.js Build System #1 - Fundamentals
+               .panel
+                  p
+                    |In part one of this three part series I learn the fundamental concepts behind creating a Gulp.js front-end build system. Its pretty sweet!
 
 
+                  a(href="https://www.youtube.com/watch?v=LmdT2zhFmn4&index=12&list=PLTFBDMtfpIkzv3umAvLJ6pvmwvjR-KvgS", target="_blank", class="link") Youtube Video Link
 
+            li
+               a(href="#jade-tutorial", class="title") Jade Tutorial
+               .panel
+                  p
+                    |After messing around this jade A.K.A pug now. It has very powerful features mimicking slighty dynamic languages like php with its use of including files and bunch of other things.
 
+                  a(href="https://www.youtube.com/watch?v=l5AXcXAP4r8&index=14&list=PLTFBDMtfpIkzv3umAvLJ6pvmwvjR-KvgS", target="_blank", class="link") Youtube Video Link
+            li
+               a(href="#jquery-tutorial", class="title") JQuery Tutorial
+               .panel
+                  p
+                    |Learn to use a simple Javascript library that makes for making some stuff easier to do.
+
+                  a(href="https://www.youtube.com/watch?v=BWXggB-T1jQ&list=PLTFBDMtfpIkzv3umAvLJ6pvmwvjR-KvgS&index=15", target="_blank", class="link") Youtube Video Link
+            li
+               a(href="#css-problems-solved", class="title") CSS Tricks : CSS Problems Solved
+               .panel
+                  p
+                    |Took a look a this video, which helps with understanding some common issues when building semantics and how to fix these issues using CSS.
+
+                  a(href="https://www.youtube.com/watch?v=mqLI2oN6rXQ&list=PLTFBDMtfpIkzv3umAvLJ6pvmwvjR-KvgS&index=20", target="_blank", class="link") Youtube Video Link
+            li
+               a(href="#grunt-code-alpha", class="title") grunt-code-alpha
+               .panel
+                  p
+                    |A starter project file, I have began working on to get you running fast by creating a minimal file tree structure and using gulp.
+
+                  a(href="https://github.com/ptejeda1/grunt-code-alpha", target="_blank", class="link") View Github
+            li
+               a(href="#github-pages", class="title") Github Pages
+               .panel
+                  p
+                    |You can now build a simple page/site using github pages, which is what I am using. See link below on how to get started.
+
+                  a(href="https://pages.github.com/", target="_blank", class="link") Github Link
+
+            li
+               a(href="#to-do-app", class="title") Learn to code a to-do list app in JavaScript
+               .panel
+                  p
+                    |I was able to follow this Video tutorial, which helped me create simple to-do application by only using Javascript.
+
+                  a(href="https://www.youtube.com/watch?v=2wCpkOk2uCg&list=PLTFBDMtfpIkzv3umAvLJ6pvmwvjR-KvgS&index=23", target="_blank", class="link") Youtube Video Link
+            li
+               a(href="#object-oriented-javascript", class="title") Object Oriented JavaScript
+               .panel
+                  p
+                    |Here is a lesson that greatly helps and gives you a starter point into the world of Javascript and the Object Oriented Programming.
+
+                  a(href="https://www.youtube.com/watch?v=O8wwnhdkPE4&index=27&list=PLTFBDMtfpIkzv3umAvLJ6pvmwvjR-KvgS", target="_blank", class="link") Youtube Video Link
 
 
 
