--- a/stylus/main.styl
+++ b/stylus/main.styl
@@ -2,7 +2,7 @@
 @import "includes/_reset";
 @import "includes/_grid";
 
-@import 'https://fonts.googleapis.com/css?family=Lato:300,400,900';
+@import 'https://fonts.googleapis.com/css?family=Lato:100,300,400,900';
 
 
 
@@ -21,22 +21,36 @@ body
 // variables
 blue = #007DC1
 blk = #303030
+gry = #707176
 wht = white
+grn = #4EF67A
 light-blue = #00A3FF
 
 h1
   font-size 54px
   line-height 60px
-  color #4EF67A
+  color grn
   font-weight 900
   margin-bottom 30px
 
-p.sub-title
-  color #707176
+p
+  color #8d8d91
   font-size: 22px
   line-height 30px
   font-weight 300
 
+a.link
+  color grn
+  font-size: 22px
+  line-height: 30px
+  font-weight: 100
+  border 1px solid grn
+  padding 10px 20px
+  display: inline-block
+  &:hover
+    background grn
+    color blk
+    font-weight: 300
 
 
 //   ___  __     __  ____   __   __    ____
@@ -80,10 +94,62 @@ a
 
 
 .blurb-hero
-  margin-top: 300px
-  margin-right: 100px
+  margin: 300px 100px 100px 0
   max-width: 400px
-  float right
+
+aside
+  max-width: 400px
+
+.blurb-post
+  margin 300px 0 0 0
+
+
+.project-links
+  margin 0 30px
+  li
+    list-style-type: decimal-leading-zero
+    list-style-position outside
+    border-bottom 1px solid rgba(grn,0.1)
+    transition all 300ms cubic-bezier(0.165, 0.840, 0.440, 1.000) 0.1s
+    color gry
+    &:hover
+      color grn
+      .panel p
+        color gry + 50
+      p
+        color gry
+      a.title
+        color gry
+        letter-spacing 2px
+        padding-left: 10px
+
+  a.title
+    padding: 20px 0
+    color grn
+    display block
+    font-size 18px
+    line-height 25px
+    font-weight 100
+    letter-spacing 1.5px
+    transition all 300ms cubic-bezier(0.165, 0.840, 0.440, 1.000) 0.1s
+
+.panel
+  opacity 0
+  display none
+  max-height 0
+  position relative
+  transition all 300ms cubic-bezier(0.165, 0.840, 0.440, 1.000) 0.1s
+  p
+    margin-bottom: 20px
+  a
+    margin-bottom: 50px
+
+.panel.show
+  opacity 1
+  display block
+  max-height inherit
+
+
 
 
 //   _______    _______   ________
