--- a/pug/index.pug
+++ b/pug/index.pug
@@ -15,7 +15,7 @@ include ./includes/header.pug
                a(href="#must-know-web-development-tech", class="title") Must-know web development tech
                .panel
                   p
-                    |Video gives you a glimpse of Web Development today and illustrates where one may be now. After watching this, it filter a lot of the buffer out there when it come to where to begin.
+                    |Video gives you a glimpse of Web Development today and illustrates where one may be now. After watching this, it filtered a lot of the buffer out there when it come to where to begin.
 
                   a(href="https://www.youtube.com/watch?v=sBzRwzY7G-k&index=16&list=PLTFBDMtfpIkzv3umAvLJ6pvmwvjR-KvgS", target="_blank", class="link") Youtube Video Link
 
